[gd_scene load_steps=88 format=3 uid="uid://dwfc4upoxonxv"]

[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/player.gd" id="1_w7orv"]
[ext_resource type="Resource" uid="uid://xwgvv7pn202x" path="res://game/prototype/tales of the unwilling/player/src/stamina.tres" id="2_fw17t"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/playerState.gd" id="4_dgidb"]
[ext_resource type="Resource" uid="uid://btr2xacyihve5" path="res://game/prototype/tales of the unwilling/player/src/controller.tres" id="4_hl12d"]
[ext_resource type="Shader" path="res://game/prototype/tales of the unwilling/src/shader/teleport.gdshader" id="5_2aqux"]
[ext_resource type="Texture2D" uid="uid://bno6w70fh5lpl" path="res://game/prototype/tales of the unwilling/player/sprites/Fantasy Knight/_CrouchFull.png" id="5_ivevw"]
[ext_resource type="Texture2D" uid="uid://dydo871yocaog" path="res://game/prototype/tales of the unwilling/player/sprites/Sprite Sheet/_Idle.png" id="5_jlvj8"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/IDLE.gd" id="5_os78y"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/JUMPING.gd" id="6_ahesq"]
[ext_resource type="Texture2D" uid="uid://hg0qhacvya4h" path="res://game/prototype/tales of the unwilling/player/sprites/_gDash.png" id="7_isn4e"]
[ext_resource type="Texture2D" uid="uid://bb3k58mdw4je5" path="res://game/prototype/tales of the unwilling/player/sprites/_SpriteSheet.png" id="7_o2jq8"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/FALLING.gd" id="8_b6uu0"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/GLIDING.gd" id="9_0ymjd"]
[ext_resource type="Texture2D" uid="uid://1jxovuc1ulxe" path="res://game/prototype/tales of the unwilling/player/sprites/_throw.png" id="9_ivqi6"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/DASHING.gd" id="14_q1b65"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/POUNDING.gd" id="16_u3f6n"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/abilityWarpState.gd" id="17_hojvl"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/WARP_READY.gd" id="18_kool5"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/WARP_SCANNING.gd" id="19_54bcv"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/JOGGING.gd" id="20_shg6a"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/WARPING.gd" id="20_vx152"]
[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/player/scripts/JUMP_DOUBLE.gd" id="22_2yb2t"]
[ext_resource type="PackedScene" uid="uid://d4kdqceqd1cm" path="res://game/prototype/tales of the unwilling/weapon/bow.tscn" id="24_101ig"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kh0p7"]
shader = ExtResource("5_2aqux")
shader_parameter/progress = 0.0
shader_parameter/noise_desnity = 80.0
shader_parameter/beam_size = 0.15
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ttkb"]
atlas = ExtResource("5_ivevw")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjmei"]
atlas = ExtResource("5_ivevw")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_meptt"]
atlas = ExtResource("5_ivevw")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_05iak"]
atlas = ExtResource("7_isn4e")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb6pj"]
atlas = ExtResource("7_isn4e")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hau0e"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq0gs"]
atlas = ExtResource("7_o2jq8")
region = Rect2(384, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcys4"]
atlas = ExtResource("7_o2jq8")
region = Rect2(480, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3k3c"]
atlas = ExtResource("7_o2jq8")
region = Rect2(576, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0kiy"]
atlas = ExtResource("7_o2jq8")
region = Rect2(672, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm5ou"]
atlas = ExtResource("7_o2jq8")
region = Rect2(768, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_haore"]
atlas = ExtResource("7_o2jq8")
region = Rect2(0, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wndx"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5vlm"]
atlas = ExtResource("7_o2jq8")
region = Rect2(192, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fir6k"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx8ew"]
atlas = ExtResource("7_o2jq8")
region = Rect2(384, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpeu5"]
atlas = ExtResource("7_o2jq8")
region = Rect2(480, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlrix"]
atlas = ExtResource("7_o2jq8")
region = Rect2(576, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls5fa"]
atlas = ExtResource("7_o2jq8")
region = Rect2(0, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_en520"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ith66"]
atlas = ExtResource("7_o2jq8")
region = Rect2(192, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdkvy"]
atlas = ExtResource("7_o2jq8")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt6up"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8duct"]
atlas = ExtResource("7_o2jq8")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0jxk"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cwk7"]
atlas = ExtResource("7_o2jq8")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymlpy"]
atlas = ExtResource("7_o2jq8")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj6e3"]
atlas = ExtResource("7_o2jq8")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck1lc"]
atlas = ExtResource("7_o2jq8")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57qc3"]
atlas = ExtResource("7_o2jq8")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6fax"]
atlas = ExtResource("7_o2jq8")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14b4m"]
atlas = ExtResource("7_o2jq8")
region = Rect2(0, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn8ac"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkhvp"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj6qc"]
atlas = ExtResource("7_o2jq8")
region = Rect2(384, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1pal"]
atlas = ExtResource("7_o2jq8")
region = Rect2(480, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kto5j"]
atlas = ExtResource("7_o2jq8")
region = Rect2(672, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7swm"]
atlas = ExtResource("7_o2jq8")
region = Rect2(768, 192, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa4ax"]
atlas = ExtResource("7_o2jq8")
region = Rect2(0, 512, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xukcs"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 512, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ip0j"]
atlas = ExtResource("7_o2jq8")
region = Rect2(192, 512, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1n7o"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 512, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsouq"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 640, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_62kvn"]
atlas = ExtResource("7_o2jq8")
region = Rect2(192, 640, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8j5y"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 640, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dejhw"]
atlas = ExtResource("7_o2jq8")
region = Rect2(384, 640, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn2up"]
atlas = ExtResource("7_o2jq8")
region = Rect2(480, 640, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8pqv"]
atlas = ExtResource("7_o2jq8")
region = Rect2(576, 640, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmjgq"]
atlas = ExtResource("7_o2jq8")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbiqx"]
atlas = ExtResource("7_o2jq8")
region = Rect2(96, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y06j7"]
atlas = ExtResource("7_o2jq8")
region = Rect2(192, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkn6g"]
atlas = ExtResource("7_o2jq8")
region = Rect2(288, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0p21"]
atlas = ExtResource("7_o2jq8")
region = Rect2(384, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_brcgm"]
atlas = ExtResource("7_o2jq8")
region = Rect2(480, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icbrr"]
atlas = ExtResource("7_o2jq8")
region = Rect2(576, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ctoj"]
atlas = ExtResource("7_o2jq8")
region = Rect2(672, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4frj7"]
atlas = ExtResource("9_ivqi6")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhbrd"]
atlas = ExtResource("9_ivqi6")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gthli"]
atlas = ExtResource("9_ivqi6")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wunk"]
atlas = ExtResource("9_ivqi6")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp4en"]
atlas = ExtResource("9_ivqi6")
region = Rect2(0, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cgk31"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ttkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjmei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meptt")
}],
"loop": false,
"name": &"crouching",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05iak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb6pj")
}],
"loop": false,
"name": &"dashing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hau0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq0gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcys4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3k3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0kiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm5ou")
}],
"loop": false,
"name": &"doublejump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haore")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wndx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5vlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fir6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx8ew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpeu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlrix")
}],
"loop": false,
"name": &"falling",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls5fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en520")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ith66")
}],
"loop": true,
"name": &"gliding",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdkvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt6up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8duct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0jxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cwk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymlpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj6e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck1lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57qc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6fax")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14b4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn8ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkhvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj6qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1pal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kto5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7swm")
}],
"loop": false,
"name": &"jumping",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa4ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xukcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ip0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1n7o")
}],
"loop": false,
"name": &"landing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsouq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62kvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8j5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dejhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn2up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8pqv")
}],
"loop": false,
"name": &"pounding",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmjgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbiqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y06j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkn6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0p21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brcgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icbrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ctoj")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4frj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhbrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gthli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wunk")
}],
"loop": false,
"name": &"throwing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp4en")
}],
"loop": false,
"name": &"winding",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b00dc"]
radius = 6.0
height = 32.0

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("stateMachine", "abilityStateMachine")]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_w7orv")
stamina = ExtResource("2_fw17t")
controller = ExtResource("4_hl12d")
stateMachine = NodePath("playerState")
abilityStateMachine = NodePath("abilityWarpState")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_jlvj8")
hframes = 10
frame = 1

[node name="sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_kh0p7")
sprite_frames = SubResource("SpriteFrames_cgk31")
animation = &"winding"
autoplay = "idle"
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("CapsuleShape2D_b00dc")

[node name="playerState" type="Node" parent="."]
script = ExtResource("4_dgidb")

[node name="IDLE" type="Node" parent="playerState"]
script = ExtResource("5_os78y")

[node name="JOGGING" type="Node" parent="playerState"]
script = ExtResource("20_shg6a")

[node name="JUMPING" type="Node" parent="playerState"]
script = ExtResource("6_ahesq")

[node name="JUMP_DOUBLE" type="Node" parent="playerState"]
script = ExtResource("22_2yb2t")

[node name="JUMP_WALL" type="Node" parent="playerState"]

[node name="FALLING" type="Node" parent="playerState"]
script = ExtResource("8_b6uu0")

[node name="GLIDING" type="Node" parent="playerState"]
script = ExtResource("9_0ymjd")

[node name="DASHING" type="Node" parent="playerState"]
script = ExtResource("14_q1b65")

[node name="POUNDING" type="Node" parent="playerState"]
script = ExtResource("16_u3f6n")

[node name="coyoteTimer" type="Timer" parent="playerState"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="abilityWarpState" type="Node" parent="."]
script = ExtResource("17_hojvl")

[node name="WARP_READY" type="Node" parent="abilityWarpState"]
script = ExtResource("18_kool5")

[node name="WARP_SCANNING" type="Node" parent="abilityWarpState"]
script = ExtResource("19_54bcv")

[node name="WARPING" type="Node" parent="abilityWarpState"]
script = ExtResource("20_vx152")

[node name="weapon" type="Node" parent="."]

[node name="bow" parent="weapon" instance=ExtResource("24_101ig")]
script = null

[connection signal="timeout" from="playerState/coyoteTimer" to="playerState/JOGGING" method="_on_coyote_timer_timeout"]
